MODON MRE BPDEV/force-app/main/default/objects/Exceptional_Brokers__c/Exceptional_Brokers__c.object-meta.xml
<CustomObject>
    <label>Exceptional Brokers</label>
    <nameField>
        <displayFormat>EXB-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptional Brokers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>