MODON MRE BPDEV/force-app/main/default/objects/Exceptional_Brokers__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <label>Broker Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exceptional Brokers</relationshipLabel>
    <relationshipName>Exceptional_Brokers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>