MODON MRE BPDEV/force-app/main/default/objects/Exceptional_Brokers__c/fields/Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percent__c</fullName>
    <label>Commission Percent %</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>