MODON MRE BPDEV/force-app/main/default/objects/Exceptional_Brokers__c/fields/Commission_Rules__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rules__c</fullName>
    <label>Commission Rules</label>
    <referenceTo>Commission_Rules__c</referenceTo>
    <relationshipLabel>Exceptional Brokers</relationshipLabel>
    <relationshipName>Exceptional_Brokers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>